# coordinator.rs

./: Cargo.toml  build.rs
proto/: core_grpc.proto
src/: lib.rs
src/core/: mod.rs
src/core/data/: error.rs  interface.rs  mod.rs
src/core/rpc/: mod.rs
