[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/snipeart007/coordinator.rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures-core = "0.3"
kiddo = "0.2"
async-trait = "0.1"
scc = "0.7"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.7"
